--- a/Snapchat/Base.lproj/Main.storyboard
+++ b/Snapchat/Base.lproj/Main.storyboard
@@ -216,14 +216,75 @@
             </objects>
             <point key="canvasLocation" x="1786.9565217391305" y="571.46739130434787"/>
         </scene>
+        <!--Ver Snap View Controller-->
+        <scene sceneID="3Nt-QJ-CxA">
+            <objects>
+                <viewController id="g6c-Bc-dXb" customClass="VerSnapViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vlT-Qa-yTr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mensaje" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rdS-TE-keO">
+                                <rect key="frame" x="40" y="96" width="64" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Imagen Enviada" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXN-IN-hdW">
+                                <rect key="frame" x="40" y="147" width="121" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="amO-Lv-QoB">
+                                <rect key="frame" x="40" y="208" width="334" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="3XI-9V-dlY"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ilQ-aD-fca" firstAttribute="trailing" secondItem="amO-Lv-QoB" secondAttribute="trailing" constant="40" id="4dV-MI-DLz"/>
+                            <constraint firstItem="amO-Lv-QoB" firstAttribute="top" secondItem="MXN-IN-hdW" secondAttribute="bottom" constant="40" id="EY7-gg-Rn2"/>
+                            <constraint firstItem="MXN-IN-hdW" firstAttribute="leading" secondItem="ilQ-aD-fca" secondAttribute="leading" constant="40" id="Icm-x1-KyA"/>
+                            <constraint firstItem="amO-Lv-QoB" firstAttribute="leading" secondItem="ilQ-aD-fca" secondAttribute="leading" constant="40" id="NMz-Tz-K7g"/>
+                            <constraint firstItem="MXN-IN-hdW" firstAttribute="top" secondItem="rdS-TE-keO" secondAttribute="bottom" constant="30" id="bQN-qm-QVu"/>
+                            <constraint firstItem="rdS-TE-keO" firstAttribute="leading" secondItem="ilQ-aD-fca" secondAttribute="leading" constant="40" id="j8z-UL-KQ3"/>
+                            <constraint firstItem="rdS-TE-keO" firstAttribute="top" secondItem="ilQ-aD-fca" secondAttribute="top" constant="40" id="vlr-79-InZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ilQ-aD-fca"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="x88-FK-hks"/>
+                    <connections>
+                        <outlet property="imageView" destination="amO-Lv-QoB" id="pbw-yr-aDM"/>
+                        <outlet property="lblMensaje" destination="rdS-TE-keO" id="rTv-cq-K5y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wO5-ph-qHv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2507" y="882"/>
+        </scene>
         <!--Snaps View Controller-->
         <scene sceneID="Xm1-4j-KpQ">
             <objects>
-                <viewController id="jp6-Xs-no7" customClass="SnapsViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="jp6-Xs-no7" customClass="SnapsViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R7n-uf-PaY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DKS-AW-Vha">
+                                <rect key="frame" x="0.0" y="56" width="414" height="660"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="YJ9-Wl-RXY" firstAttribute="trailing" secondItem="DKS-AW-Vha" secondAttribute="trailing" id="QQU-oH-abh"/>
+                            <constraint firstItem="DKS-AW-Vha" firstAttribute="top" secondItem="YJ9-Wl-RXY" secondAttribute="top" id="VXA-y3-ZdO"/>
+                            <constraint firstItem="YJ9-Wl-RXY" firstAttribute="bottom" secondItem="DKS-AW-Vha" secondAttribute="bottom" id="b1a-XR-Dbk"/>
+                            <constraint firstItem="DKS-AW-Vha" firstAttribute="leading" secondItem="YJ9-Wl-RXY" secondAttribute="leading" id="hGk-Gs-UUg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="YJ9-Wl-RXY"/>
                     </view>
                     <navigationItem key="navigationItem" id="VcU-Jq-woO">
@@ -238,6 +299,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tablaSnaps" destination="DKS-AW-Vha" id="ph5-3E-VJa"/>
+                        <segue destination="g6c-Bc-dXb" kind="show" identifier="versnapsegue" id="1bj-Pa-PHj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dxR-7e-r0j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -247,24 +312,41 @@
         <scene sceneID="nkv-r2-xHJ">
             <objects>
                 <viewController id="iAL-5v-EK6" customClass="ImagenViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="CtX-tn-USO">
+                    <view key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="CtX-tn-USO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bo-UZ-4hs">
-                                <rect key="frame" x="87" y="71" width="240" height="128"/>
+                                <rect key="frame" x="80" y="76" width="254" height="140"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="2nc-01-PfP"/>
-                                    <constraint firstAttribute="height" constant="128" id="BDg-5R-dD9"/>
+                                    <constraint firstAttribute="height" constant="140" id="xzX-7n-jSi"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IKA-Yl-7Mx">
+                                <rect key="frame" x="111.66666666666669" y="241" width="191" height="120"/>
+                                <state key="normal" title="GRABAR" image="grabar">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="grabarTapped:" destination="iAL-5v-EK6" eventType="touchUpInside" id="q0i-63-XuP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZf-G9-T07">
+                                <rect key="frame" x="91" y="399" width="232" height="120"/>
+                                <state key="normal" title="REPRODUCIR" image="reproducir">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="reproducirTapped:" destination="iAL-5v-EK6" eventType="touchUpInside" id="x5Z-pC-7hx"/>
+                                </connections>
+                            </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Descripcion" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N5Q-PS-43p">
-                                <rect key="frame" x="89" y="219" width="238" height="34"/>
+                                <rect key="frame" x="80" y="564" width="254" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Naf-ji-eOc">
-                                <rect key="frame" x="89" y="273" width="238" height="30"/>
+                                <rect key="frame" x="80" y="616" width="254" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Elegir Contacto">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -276,28 +358,42 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Naf-ji-eOc" firstAttribute="centerX" secondItem="CtX-tn-USO" secondAttribute="centerX" constant="1" id="1hq-A6-x3g"/>
-                            <constraint firstItem="N5Q-PS-43p" firstAttribute="top" secondItem="4bo-UZ-4hs" secondAttribute="bottom" constant="20" id="2Zk-t4-rEY"/>
-                            <constraint firstItem="4bo-UZ-4hs" firstAttribute="top" secondItem="vld-HV-ehU" secondAttribute="top" constant="15" id="CIE-vW-doX"/>
-                            <constraint firstItem="4bo-UZ-4hs" firstAttribute="centerX" secondItem="CtX-tn-USO" secondAttribute="centerX" id="DPb-nn-B0S"/>
-                            <constraint firstItem="N5Q-PS-43p" firstAttribute="width" secondItem="4bo-UZ-4hs" secondAttribute="width" multiplier="0.404167" constant="141" id="JMb-qi-SxL"/>
-                            <constraint firstItem="Naf-ji-eOc" firstAttribute="width" secondItem="N5Q-PS-43p" secondAttribute="width" multiplier="0.193277" constant="192" id="Zrg-D9-JGI"/>
-                            <constraint firstItem="Naf-ji-eOc" firstAttribute="top" secondItem="N5Q-PS-43p" secondAttribute="bottom" constant="20" id="bYy-Sp-HIl"/>
-                            <constraint firstItem="N5Q-PS-43p" firstAttribute="centerX" secondItem="CtX-tn-USO" secondAttribute="centerX" constant="1" id="weu-Uf-eCh"/>
+                            <constraint firstItem="vld-HV-ehU" firstAttribute="trailing" secondItem="N5Q-PS-43p" secondAttribute="trailing" constant="80" id="44y-YU-0Lh"/>
+                            <constraint firstItem="N5Q-PS-43p" firstAttribute="leading" secondItem="vld-HV-ehU" secondAttribute="leading" constant="80" id="5X1-sr-45G"/>
+                            <constraint firstItem="4bo-UZ-4hs" firstAttribute="top" secondItem="vld-HV-ehU" secondAttribute="top" constant="20" id="7BN-WC-EbN"/>
+                            <constraint firstItem="Naf-ji-eOc" firstAttribute="top" secondItem="N5Q-PS-43p" secondAttribute="bottom" constant="18" id="9CN-Op-Nht"/>
+                            <constraint firstItem="vld-HV-ehU" firstAttribute="trailing" secondItem="4bo-UZ-4hs" secondAttribute="trailing" constant="80" id="HIh-ay-gX2"/>
+                            <constraint firstItem="fZf-G9-T07" firstAttribute="centerX" secondItem="CtX-tn-USO" secondAttribute="centerX" id="a9J-Us-Qlj"/>
+                            <constraint firstItem="N5Q-PS-43p" firstAttribute="top" secondItem="fZf-G9-T07" secondAttribute="bottom" constant="45" id="c3o-59-iW2"/>
+                            <constraint firstItem="IKA-Yl-7Mx" firstAttribute="centerX" secondItem="CtX-tn-USO" secondAttribute="centerX" id="f8u-kW-hp0"/>
+                            <constraint firstItem="fZf-G9-T07" firstAttribute="top" secondItem="IKA-Yl-7Mx" secondAttribute="bottom" constant="38" id="kJc-3M-81g"/>
+                            <constraint firstItem="Naf-ji-eOc" firstAttribute="leading" secondItem="vld-HV-ehU" secondAttribute="leading" constant="80" id="pfh-l7-ffC"/>
+                            <constraint firstItem="IKA-Yl-7Mx" firstAttribute="top" secondItem="4bo-UZ-4hs" secondAttribute="bottom" constant="25" id="sYJ-oG-KHp"/>
+                            <constraint firstItem="vld-HV-ehU" firstAttribute="trailing" secondItem="Naf-ji-eOc" secondAttribute="trailing" constant="80" id="wcW-5d-v9z"/>
+                            <constraint firstItem="4bo-UZ-4hs" firstAttribute="leading" secondItem="vld-HV-ehU" secondAttribute="leading" constant="80" id="zon-6l-rKa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vld-HV-ehU"/>
                     </view>
                     <navigationItem key="navigationItem" title="Enviar Mensaje" id="adg-lp-Ptm">
-                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="x49-bA-9yO">
-                            <connections>
-                                <action selector="camaraTapped:" destination="iAL-5v-EK6" id="F6v-9I-EcX"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="x49-bA-9yO">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="iAL-5v-EK6" id="F6v-9I-EcX"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="organize" id="6zj-BS-Egk">
+                                <connections>
+                                    <action selector="mediaTapped:" destination="iAL-5v-EK6" id="hpx-An-0HK"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="descripcionTextField" destination="N5Q-PS-43p" id="w5m-NG-MfY"/>
                         <outlet property="elegirContactoBoton" destination="Naf-ji-eOc" id="wMU-LD-wBh"/>
+                        <outlet property="grabarButton" destination="IKA-Yl-7Mx" id="olZ-n9-NVx"/>
                         <outlet property="imageView" destination="4bo-UZ-4hs" id="lFu-3V-DtX"/>
+                        <outlet property="reproducirButton" destination="fZf-G9-T07" id="Dk6-Rb-Nyl"/>
                         <segue destination="8dv-Gl-TQX" kind="show" identifier="seleccionarContactoSegue" id="gnl-DK-8VV"/>
                     </connections>
                 </viewController>
@@ -374,6 +470,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="grabar" width="120" height="120"/>
+        <image name="reproducir" width="120" height="120"/>
         <image name="tux-200" width="169" height="200"/>
     </resources>
 </document>
